cabal-version: 3.0
name: chainweb-storage
version: 0.1.0.0
synopsis: Key Value Storage for Chainweb
description:
    Various tools for key value stores used in
    chainweb (https://github.com/kadena-io/chainweb-node
homepage: https://github.com/kadena-io/chainweb-storage
bug-reports: https://github.com/kadena-io/chainweb-storage/issues
license: BSD-3-Clause
license-file: LICENSE
author: Lars Kuhtz
maintainer: lars@kadena.io
copyright: Copyright (c) 2019, Kadena LLC
category: Data
tested-with:
    GHC==9.0.1
    GHC==8.10.4
    GHC==8.8.4
extra-source-files:
    README.md
    CHANGELOG.md
    rocksdb-6.29.3.tar.gz
-- build-type: Custom

source-repository head
    type: git
    location: https://github.com/kadena-io/chainweb-storage.git

library
    hs-source-dirs: src
    cxx-sources: cpp/chainweb-rocksdb.cpp
    extra-libraries: stdc++

    default-language: Haskell2010
    ghc-options:
        -Wall
    exposed-modules:
        Data.CAS
        Data.CAS.Forgetful
        Data.CAS.HashMap
        Data.CAS.RocksDB
        Data.CAS.RocksDB.Iterator
        Database.RocksDB.C
        Database.RocksDB.Internal
        Database.RocksDB.Base
        Database.RocksDB.Types
        Data.DedupStore
    build-depends:
          base >=4.10 && <4.16
        , binary
        , bytestring >=0.10
        , containers >=0.5
        , cryptonite >= 0.25
        , directory >=1.3
        , filepath
        , deepseq >=1.4
        , exceptions >=0.10
        , hashable >=1.2
        , lens >=4.16
        , memory >=0.14
        , nothunks >= 0.1.0.0
        , stm >=2.4
        , streaming >=0.2
        , temporary >=1.3
        , text >=1.2
        , transformers >=0.5
        , unordered-containers >=0.2
        , vector >=0.12

    extra-libraries:
        snappy
        gflags
        z
        bz2
        -- lz4
        -- zstd
        tbb

    include-dirs:
        rocksdb
        rocksdb/include

    -- These options are extracted from CXXFLAGS the RocksDB Makefile
    cxx-options:
        -fno-rtti
        -g
        -W
        -Wextra
        -Wall
        -Wsign-compare
        -Wshadow
        -Wunused-parameter
        -Werror
        -std=c++11
        -faligned-new
        -DHAVE_ALIGNED_NEW
        -DROCKSDB_PLATFORM_POSIX
        -DROCKSDB_LIB_IO_POSIX
        -DSNAPPY
        -DGFLAGS=1
        -DZLIB
        -DBZIP2
        -DTBB
        -DROCKSDB_BACKTRACE
        -march=native
        -DHAVE_SSE42
        -DHAVE_PCLMUL
        -DHAVE_AVX2
        -DHAVE_BMI
        -DHAVE_LZCNT
        -DHAVE_UINT128_EXTENSION
        -DROCKSDB_SUPPORT_THREAD_LOCAL
        -fno-omit-frame-pointer
        -momit-leaf-frame-pointer
        -DNDEBUG
        -Woverloaded-virtual
        -Wnon-virtual-dtor
        -Wno-missing-field-initializers
        -- -O2

    if os(linux)
        cxx-options:
            -DOS_LINUX
            -fno-builtin-memcmp
            -DROCKSDB_FALLOCATE_PRESENT
            -DROCKSDB_MALLOC_USABLE_SIZE
            -DROCKSDB_PTHREAD_ADAPTIVE_MUTEX
            -DROCKSDB_RANGESYNC_PRESENT
            -DROCKSDB_SCHED_GETCPU_PRESENT
            -DROCKSDB_AUXV_GETAUXVAL_PRESENT

    if os(darwin)
        cxx-options:
            -DOS_MACOSX
            -Wshorten-64-to-32
            -DHAVE_FULLFSYNC

    -- These sources are extracted from LIB_OBJECTS the RocksDB Makefile
    cxx-sources:
        rocksdb/cache/cache.cc
        rocksdb/cache/cache_entry_roles.cc
        rocksdb/cache/cache_key.cc
        rocksdb/cache/cache_reservation_manager.cc
        rocksdb/cache/clock_cache.cc
        rocksdb/cache/lru_cache.cc
        rocksdb/cache/sharded_cache.cc
        rocksdb/db/arena_wrapped_db_iter.cc
        rocksdb/db/blob/blob_fetcher.cc
        rocksdb/db/blob/blob_file_addition.cc
        rocksdb/db/blob/blob_file_builder.cc
        rocksdb/db/blob/blob_file_cache.cc
        rocksdb/db/blob/blob_file_garbage.cc
        rocksdb/db/blob/blob_file_meta.cc
        rocksdb/db/blob/blob_file_reader.cc
        rocksdb/db/blob/blob_garbage_meter.cc
        rocksdb/db/blob/blob_log_format.cc
        rocksdb/db/blob/blob_log_sequential_reader.cc
        rocksdb/db/blob/blob_log_writer.cc
        rocksdb/db/blob/prefetch_buffer_collection.cc
        rocksdb/db/builder.cc
        rocksdb/db/c.cc
        rocksdb/db/column_family.cc
        rocksdb/db/compaction/compaction.cc
        rocksdb/db/compaction/compaction_iterator.cc
        rocksdb/db/compaction/compaction_job.cc
        rocksdb/db/compaction/compaction_picker.cc
        rocksdb/db/compaction/compaction_picker_fifo.cc
        rocksdb/db/compaction/compaction_picker_level.cc
        rocksdb/db/compaction/compaction_picker_universal.cc
        rocksdb/db/compaction/sst_partitioner.cc
        rocksdb/db/convenience.cc
        rocksdb/db/db_filesnapshot.cc
        rocksdb/db/db_impl/compacted_db_impl.cc
        rocksdb/db/db_impl/db_impl.cc
        rocksdb/db/db_impl/db_impl_compaction_flush.cc
        rocksdb/db/db_impl/db_impl_experimental.cc
        rocksdb/db/db_impl/db_impl_files.cc
        rocksdb/db/db_impl/db_impl_open.cc
        rocksdb/db/db_impl/db_impl_readonly.cc
        rocksdb/db/db_impl/db_impl_secondary.cc
        rocksdb/db/db_impl/db_impl_write.cc
        rocksdb/db/db_info_dumper.cc
        rocksdb/db/db_iter.cc
        rocksdb/db/dbformat.cc
        rocksdb/db/error_handler.cc
        rocksdb/db/event_helpers.cc
        rocksdb/db/experimental.cc
        rocksdb/db/external_sst_file_ingestion_job.cc
        rocksdb/db/file_indexer.cc
        rocksdb/db/flush_job.cc
        rocksdb/db/flush_scheduler.cc
        rocksdb/db/forward_iterator.cc
        rocksdb/db/import_column_family_job.cc
        rocksdb/db/internal_stats.cc
        rocksdb/db/logs_with_prep_tracker.cc
        rocksdb/db/log_reader.cc
        rocksdb/db/log_writer.cc
        rocksdb/db/malloc_stats.cc
        rocksdb/db/memtable.cc
        rocksdb/db/memtable_list.cc
        rocksdb/db/merge_helper.cc
        rocksdb/db/merge_operator.cc
        rocksdb/db/output_validator.cc
        rocksdb/db/periodic_work_scheduler.cc
        rocksdb/db/range_del_aggregator.cc
        rocksdb/db/range_tombstone_fragmenter.cc
        rocksdb/db/repair.cc
        rocksdb/db/snapshot_impl.cc
        rocksdb/db/table_cache.cc
        rocksdb/db/table_properties_collector.cc
        rocksdb/db/transaction_log_impl.cc
        rocksdb/db/trim_history_scheduler.cc
        rocksdb/db/version_builder.cc
        rocksdb/db/version_edit.cc
        rocksdb/db/version_edit_handler.cc
        rocksdb/db/version_set.cc
        rocksdb/db/wal_edit.cc
        rocksdb/db/wal_manager.cc
        rocksdb/db/write_batch.cc
        rocksdb/db/write_batch_base.cc
        rocksdb/db/write_controller.cc
        rocksdb/db/write_thread.cc
        rocksdb/env/composite_env.cc
        rocksdb/env/env.cc
        rocksdb/env/env_chroot.cc
        rocksdb/env/env_encryption.cc
        rocksdb/env/env_hdfs.cc
        rocksdb/env/env_posix.cc
        rocksdb/env/file_system.cc
        rocksdb/env/fs_posix.cc
        rocksdb/env/fs_remap.cc
        rocksdb/env/file_system_tracer.cc
        rocksdb/env/io_posix.cc
        rocksdb/env/mock_env.cc
        rocksdb/env/unique_id_gen.cc
        rocksdb/file/delete_scheduler.cc
        rocksdb/file/file_prefetch_buffer.cc
        rocksdb/file/file_util.cc
        rocksdb/file/filename.cc
        rocksdb/file/line_file_reader.cc
        rocksdb/file/random_access_file_reader.cc
        rocksdb/file/read_write_util.cc
        rocksdb/file/readahead_raf.cc
        rocksdb/file/sequence_file_reader.cc
        rocksdb/file/sst_file_manager_impl.cc
        rocksdb/file/writable_file_writer.cc
        rocksdb/logging/auto_roll_logger.cc
        rocksdb/logging/event_logger.cc
        rocksdb/logging/log_buffer.cc
        rocksdb/memory/arena.cc
        rocksdb/memory/concurrent_arena.cc
        rocksdb/memory/jemalloc_nodump_allocator.cc
        rocksdb/memory/memkind_kmem_allocator.cc
        rocksdb/memory/memory_allocator.cc
        rocksdb/memtable/alloc_tracker.cc
        rocksdb/memtable/hash_linklist_rep.cc
        rocksdb/memtable/hash_skiplist_rep.cc
        rocksdb/memtable/skiplistrep.cc
        rocksdb/memtable/vectorrep.cc
        rocksdb/memtable/write_buffer_manager.cc
        rocksdb/monitoring/histogram.cc
        rocksdb/monitoring/histogram_windowing.cc
        rocksdb/monitoring/in_memory_stats_history.cc
        rocksdb/monitoring/instrumented_mutex.cc
        rocksdb/monitoring/iostats_context.cc
        rocksdb/monitoring/perf_context.cc
        rocksdb/monitoring/perf_level.cc
        rocksdb/monitoring/persistent_stats_history.cc
        rocksdb/monitoring/statistics.cc
        rocksdb/monitoring/thread_status_impl.cc
        rocksdb/monitoring/thread_status_updater.cc
        rocksdb/monitoring/thread_status_updater_debug.cc
        rocksdb/monitoring/thread_status_util.cc
        rocksdb/monitoring/thread_status_util_debug.cc
        rocksdb/options/cf_options.cc
        rocksdb/options/configurable.cc
        rocksdb/options/customizable.cc
        rocksdb/options/db_options.cc
        rocksdb/options/options.cc
        rocksdb/options/options_helper.cc
        rocksdb/options/options_parser.cc
        rocksdb/port/port_posix.cc
        rocksdb/port/stack_trace.cc
        rocksdb/table/adaptive/adaptive_table_factory.cc
        rocksdb/table/block_based/binary_search_index_reader.cc
        rocksdb/table/block_based/block.cc
        rocksdb/table/block_based/block_based_filter_block.cc
        rocksdb/table/block_based/block_based_table_builder.cc
        rocksdb/table/block_based/block_based_table_factory.cc
        rocksdb/table/block_based/block_based_table_iterator.cc
        rocksdb/table/block_based/block_based_table_reader.cc
        rocksdb/table/block_based/block_builder.cc
        rocksdb/table/block_based/block_prefetcher.cc
        rocksdb/table/block_based/block_prefix_index.cc
        rocksdb/table/block_based/data_block_hash_index.cc
        rocksdb/table/block_based/data_block_footer.cc
        rocksdb/table/block_based/filter_block_reader_common.cc
        rocksdb/table/block_based/filter_policy.cc
        rocksdb/table/block_based/flush_block_policy.cc
        rocksdb/table/block_based/full_filter_block.cc
        rocksdb/table/block_based/hash_index_reader.cc
        rocksdb/table/block_based/index_builder.cc
        rocksdb/table/block_based/index_reader_common.cc
        rocksdb/table/block_based/parsed_full_filter_block.cc
        rocksdb/table/block_based/partitioned_filter_block.cc
        rocksdb/table/block_based/partitioned_index_iterator.cc
        rocksdb/table/block_based/partitioned_index_reader.cc
        rocksdb/table/block_based/reader_common.cc
        rocksdb/table/block_based/uncompression_dict_reader.cc
        rocksdb/table/block_fetcher.cc
        rocksdb/table/cuckoo/cuckoo_table_builder.cc
        rocksdb/table/cuckoo/cuckoo_table_factory.cc
        rocksdb/table/cuckoo/cuckoo_table_reader.cc
        rocksdb/table/format.cc
        rocksdb/table/get_context.cc
        rocksdb/table/iterator.cc
        rocksdb/table/merging_iterator.cc
        rocksdb/table/meta_blocks.cc
        rocksdb/table/persistent_cache_helper.cc
        rocksdb/table/plain/plain_table_bloom.cc
        rocksdb/table/plain/plain_table_builder.cc
        rocksdb/table/plain/plain_table_factory.cc
        rocksdb/table/plain/plain_table_index.cc
        rocksdb/table/plain/plain_table_key_coding.cc
        rocksdb/table/plain/plain_table_reader.cc
        rocksdb/table/sst_file_dumper.cc
        rocksdb/table/sst_file_reader.cc
        rocksdb/table/sst_file_writer.cc
        rocksdb/table/table_factory.cc
        rocksdb/table/table_properties.cc
        rocksdb/table/two_level_iterator.cc
        rocksdb/table/unique_id.cc
        rocksdb/test_util/sync_point.cc
        rocksdb/test_util/sync_point_impl.cc
        rocksdb/test_util/transaction_test_util.cc
        rocksdb/tools/dump/db_dump_tool.cc
        rocksdb/trace_replay/trace_record_handler.cc
        rocksdb/trace_replay/trace_record_result.cc
        rocksdb/trace_replay/trace_record.cc
        rocksdb/trace_replay/trace_replay.cc
        rocksdb/trace_replay/block_cache_tracer.cc
        rocksdb/trace_replay/io_tracer.cc
        -- rocksdb/util/build_version.cc
        rocksdb/util/coding.cc
        rocksdb/util/compaction_job_stats_impl.cc
        rocksdb/util/comparator.cc
        rocksdb/util/compression_context_cache.cc
        rocksdb/util/concurrent_task_limiter_impl.cc
        rocksdb/util/crc32c.cc
        rocksdb/util/dynamic_bloom.cc
        rocksdb/util/hash.cc
        rocksdb/util/murmurhash.cc
        rocksdb/util/random.cc
        rocksdb/util/rate_limiter.cc
        rocksdb/util/ribbon_config.cc
        rocksdb/util/regex.cc
        rocksdb/util/slice.cc
        rocksdb/util/file_checksum_helper.cc
        rocksdb/util/status.cc
        rocksdb/util/string_util.cc
        rocksdb/util/thread_local.cc
        rocksdb/util/threadpool_imp.cc
        rocksdb/util/xxhash.cc
        rocksdb/utilities/backupable/backupable_db.cc
        rocksdb/utilities/blob_db/blob_compaction_filter.cc
        rocksdb/utilities/blob_db/blob_db.cc
        rocksdb/utilities/blob_db/blob_db_impl.cc
        rocksdb/utilities/blob_db/blob_db_impl_filesnapshot.cc
        rocksdb/utilities/blob_db/blob_file.cc
        rocksdb/utilities/cache_dump_load.cc
        rocksdb/utilities/cache_dump_load_impl.cc
        rocksdb/utilities/cassandra/cassandra_compaction_filter.cc
        rocksdb/utilities/cassandra/format.cc
        rocksdb/utilities/cassandra/merge_operator.cc
        rocksdb/utilities/checkpoint/checkpoint_impl.cc
        rocksdb/utilities/compaction_filters.cc
        rocksdb/utilities/compaction_filters/remove_emptyvalue_compactionfilter.cc
        rocksdb/utilities/convenience/info_log_finder.cc
        rocksdb/utilities/debug.cc
        rocksdb/utilities/env_mirror.cc
        rocksdb/utilities/env_timed.cc
        rocksdb/utilities/fault_injection_env.cc
        rocksdb/utilities/fault_injection_fs.cc
        rocksdb/utilities/fault_injection_secondary_cache.cc
        rocksdb/utilities/leveldb_options/leveldb_options.cc
        rocksdb/utilities/memory/memory_util.cc
        rocksdb/utilities/merge_operators.cc
        rocksdb/utilities/merge_operators/max.cc
        rocksdb/utilities/merge_operators/put.cc
        rocksdb/utilities/merge_operators/sortlist.cc
        rocksdb/utilities/merge_operators/string_append/stringappend.cc
        rocksdb/utilities/merge_operators/string_append/stringappend2.cc
        rocksdb/utilities/merge_operators/uint64add.cc
        rocksdb/utilities/merge_operators/bytesxor.cc
        rocksdb/utilities/object_registry.cc
        rocksdb/utilities/option_change_migration/option_change_migration.cc
        rocksdb/utilities/options/options_util.cc
        rocksdb/utilities/persistent_cache/block_cache_tier.cc
        rocksdb/utilities/persistent_cache/block_cache_tier_file.cc
        rocksdb/utilities/persistent_cache/block_cache_tier_metadata.cc
        rocksdb/utilities/persistent_cache/persistent_cache_tier.cc
        rocksdb/utilities/persistent_cache/volatile_tier_impl.cc
        rocksdb/utilities/simulator_cache/cache_simulator.cc
        rocksdb/utilities/simulator_cache/sim_cache.cc
        rocksdb/utilities/table_properties_collectors/compact_on_deletion_collector.cc
        rocksdb/utilities/trace/file_trace_reader_writer.cc
        rocksdb/utilities/trace/replayer_impl.cc
        rocksdb/utilities/transactions/lock/lock_manager.cc
        rocksdb/utilities/transactions/lock/point/point_lock_tracker.cc
        rocksdb/utilities/transactions/lock/point/point_lock_manager.cc
        rocksdb/utilities/transactions/optimistic_transaction.cc
        rocksdb/utilities/transactions/optimistic_transaction_db_impl.cc
        rocksdb/utilities/transactions/pessimistic_transaction.cc
        rocksdb/utilities/transactions/pessimistic_transaction_db.cc
        rocksdb/utilities/transactions/snapshot_checker.cc
        rocksdb/utilities/transactions/transaction_base.cc
        rocksdb/utilities/transactions/transaction_db_mutex_impl.cc
        rocksdb/utilities/transactions/transaction_util.cc
        rocksdb/utilities/transactions/write_prepared_txn.cc
        rocksdb/utilities/transactions/write_prepared_txn_db.cc
        rocksdb/utilities/transactions/write_unprepared_txn.cc
        rocksdb/utilities/transactions/write_unprepared_txn_db.cc
        rocksdb/utilities/ttl/db_ttl_impl.cc
        rocksdb/utilities/wal_filter.cc
        rocksdb/utilities/write_batch_with_index/write_batch_with_index.cc
        rocksdb/utilities/write_batch_with_index/write_batch_with_index_internal.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/concurrent_tree.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/keyrange.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/lock_request.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/locktree.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/manager.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/range_buffer.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/treenode.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/txnid_set.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/wfg.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/standalone_port.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/util/dbt.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/util/memarena.cc
        rocksdb/utilities/transactions/lock/range/range_tree/range_tree_lock_manager.cc
        rocksdb/utilities/transactions/lock/range/range_tree/range_tree_lock_tracker.cc

    if os(windows)
        cxx-sources:
            rocksdb/port/win/env_default.cc
            rocksdb/port/win/env_win.cc
            rocksdb/port/win/io_win.cc
            rocksdb/port/win/port_win.cc
            rocksdb/port/win/win_logger.cc
            rocksdb/port/win/win_thread.cc


test-suite rocksdb-tests
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    default-language: Haskell2010
    main-is: Main.hs
    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N
    other-modules:
    build-depends:
        -- internal
        , chainweb-storage

        -- external
        , async >=2.2
        , base >=4.10 && <4.16
        , bytestring >=0.10
        , exceptions >=0.10
        , lens >=4.16
        , nothunks >= 0.1.0.0
        , vector >=0.12

custom-setup
  setup-depends:
      base  >= 4.12
    , Cabal >= 3.0.0.0
    , containers
    , directory
    , filepath
